# claude-skills

./: .bandit  .confluence.yaml  .gitignore  .pre-commit-config.yaml  CLOUDCTL_SKILL_SUMMARY.md  CONFLUENCE_SKILL_SUMMARY.md  CONTRIBUTING.md  CROSS_CLOUD_SETUP.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP_SUMMARY.md  confluence_mcp_server.py  pyproject.toml
.claude/: CLAUDE.md  confluence.md
.github/workflows/: test.yml
docs/: SKILL_TEMPLATE.md  TESTING_STRATEGY.md
skills/cloudctl/: .cloudctl.example.yaml  README.md  SKILL_MANIFEST.json  __init__.py  config.schema.json  models.py  skill.py
skills/cloudctl/docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
skills/confluence/: README.md  __init__.py  config.example.yaml  confluence_client.py  models.py  skill.py
skills/confluence/docs/: ARCHITECTURE.md
skills/confluence/tests/: test_config_merging.py  test_jira_integration.py
src/: __init__.py  base_cli.py  base_config.py  base_guardrails.py
tests/: __init__.py  conftest.py  test_base_config.py  test_base_guardrails.py  test_cloudctl_skill.py  test_models.py  test_skill.py
