[project]
name = "claude-skills"
version = "1.0.0"
description = "Production-grade platform for building Claude skills with reusable patterns, guardrails, and utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Craig Hoad", email = "craig@craighoad.com"}
]
keywords = ["claude", "skills", "ai", "automation", "jira", "api"]

dependencies = [
    "requests>=2.31.0",
    "jsonschema>=4.20.0",
    "typing-extensions>=4.8.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/craighoad/claude-skills"
Documentation = "https://github.com/craighoad/claude-skills#readme"
Repository = "https://github.com/craighoad/claude-skills"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
